# alfalfa

./: .gitignore
src/decoder/: continuation_player.hh  dependency_tracking.cc  dependency_tracking.hh
src/frontend/: Makefile.am  alfalfa-describe.cc  alfalfa-verify.cc  alfalfa-weave.cc  stats.cc
src/tests/: ivfcopy.cc  switch-test
src/util/: file.cc  file.hh  ivf.cc  ivf.hh
